# openapi.json
@@ -1,45 +1,6 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/users/{userId}": {
-      "get": {
-        "operationId": "UsersController_getProfile",
-        "parameters": [
-          {
-            "name": "userId",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "type": "number"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User profile",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProfileResponseDto"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "summary": "Get user profile",
-        "tags": [
-          "Users"
-        ]
-      }
-    },
     "/auth/register": {
       "post": {
         "operationId": "AuthController_register",
@@ -109,6 +70,48 @@
           "Authentication"
         ]
       }
+    },
+    "/profiles/{userId}": {
+      "get": {
+        "operationId": "ProfilesController_getProfileByUserId",
+        "parameters": [
+          {
+            "name": "userId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User profile data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ProfileResponseDto"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Profile not found"
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "Get user profile by User ID",
+        "tags": [
+          "Profiles"
+        ]
+      }
     }
   },
   "info": {
@@ -132,69 +135,6 @@
       }
     },
     "schemas": {
-      "ProfileResponseDto": {
-        "type": "object",
-        "properties": {
-          "userId": {
-            "type": "number",
-            "description": "User ID",
-            "example": 1
-          },
-          "username": {
-            "type": "string",
-            "description": "Username",
-            "example": "john_doe"
-          },
-          "firstName": {
-            "type": "string",
-            "description": "First name",
-            "example": "John"
-          },
-          "lastName": {
-            "type": "string",
-            "description": "Last name",
-            "example": "Doe"
-          },
-          "birthDate": {
-            "format": "date-time",
-            "type": "string",
-            "description": "Birth date",
-            "example": "1990-01-01"
-          },
-          "gender": {
-            "type": "string",
-            "description": "Gender",
-            "example": "male"
-          },
-          "interests": {
-            "description": "Interests",
-            "example": [
-              "music",
-              "travel",
-              "reading"
-            ],
-            "type": "array",
-            "items": {
-              "type": "string"
-            }
-          },
-          "city": {
-            "type": "string",
-            "description": "City",
-            "example": "Saint Petersburg"
-          }
-        },
-        "required": [
-          "userId",
-          "username",
-          "firstName",
-          "lastName",
-          "birthDate",
-          "gender",
-          "interests",
-          "city"
-        ]
-      },
       "RegisterRequestDto": {
         "type": "object",
         "properties": {
@@ -338,6 +278,62 @@
         },
         "required": [
           "access_token",
+          "user_id"
+        ]
+      },
+      "ProfileResponseDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "number",
+            "description": "Profile ID",
+            "example": 1
+          },
+          "user_id": {
+            "type": "number",
+            "description": "User ID associated with this profile",
+            "example": 1
+          },
+          "first_name": {
+            "type": "string",
+            "description": "First name",
+            "example": "John"
+          },
+          "last_name": {
+            "type": "string",
+            "description": "Last name",
+            "example": "Doe"
+          },
+          "birth_date": {
+            "type": "string",
+            "description": "Birth date",
+            "example": "1990-01-01",
+            "format": "date"
+          },
+          "gender": {
+            "type": "string",
+            "description": "Gender",
+            "example": "male"
+          },
+          "interests": {
+            "description": "Interests",
+            "example": [
+              "music",
+              "travel"
+            ],
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "city": {
+            "type": "string",
+            "description": "City",
+            "example": "St. Petersburg"
+          }
+        },
+        "required": [
+          "id",
           "user_id"
         ]
       }
